--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,6 +16,7 @@
     <td><%= task.deadline %></td>
     <td><%= task.priority %></td>
     <td><%= task.status %></td>
+    <td><%= link_to "タスクの詳細", task_path(task.id) %></td>
     <td><%= link_to "タスクを編集する", edit_task_path(task.id) %></td>
     <td><%= link_to 'タスクを削除する', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
   </tr>
