タスクを新規作成テスト

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -30,5 +30,5 @@
     <%= form.label :status %>
     <%= form.text_field :status %>
   </div>
-  <%= form.submit %>
+  <%= form.submit value: "aaa" %>
 <% end %>
