--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,3 +5,5 @@
 <p>終了期限： <%= @task.deadline %></p>
 <p>優先順位： <%= @task.priority %></p>
 <p>状態： <%= @task.status %></p>
+
+<%= link_to 'タスクに戻る', tasks_path %>
