--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="task_deadline">
    <%= form.label :deadline %>
-    <%= form.text_field :deadline %>
+    <%= form.date_field :deadline %>
   </div>
   <div class="task_priority">
     <%= form.label :priority %>
