--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,12 +3,12 @@
 
 <table>
   <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-    <th>終了期限</th>
-    <th>優先順位</th>
-    <th>状態</th>
-    <th>作成日時</th>
+    <th>タスク名</th>
+    <th>詳しい内容</th>
+    <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
+    <th>登録日時</th>
+    <th>ステータス</th>
+    <th>優先度</th>
   </tr>
 
   
@@ -17,12 +17,12 @@
     <td><%= task.title %></td>
     <td><%= task.content %></td>
     <td><%= task.deadline %></td>
-    <td><%= task.priority %></td>
-    <td><%= task.status %></td>
     <td><%= task.created_at %></td>
-    <td><%= link_to "タスクの詳細", task_path(task.id) %></td>
-    <td><%= link_to "タスクを編集する", edit_task_path(task.id) %></td>
-    <td><%= link_to 'タスクを削除する', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+    <td><%= task.status %></td>
+    <td><%= task.priority %></td>
+    <td><%= link_to "詳細", task_path(task.id) %></td>
+    <td><%= link_to "編集", edit_task_path(task.id) %></td>
+    <td><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
   </tr>
   <% end %>
   
