--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="task_status">
     <%= form.label :status %>
-    <%= form.text_field :status %>
+    <%= form.select :status, ["未着手", "着手中", "完了"] %>
   </div>
   <div class="task_priority">
   <%= form.label :priority %>
