--- a/app/views/tasks/search.html.erb
+++ b/app/views/tasks/search.html.erb
@@ -1,4 +1,5 @@
-<h1>タスク一覧</h1>
+<h1>検索一覧</h1>
+<%= params[:title] %>
 <p><%= notice %></p>
 <%= form_with url:search_tasks_path, local: true, method: "get" do |form| %>
   <%= form.label :title, "Search for" %>
@@ -6,7 +7,6 @@
   <%= form.select :status, ["未着手", "着手中", "完了"] %>
   <%= form.submit "Search" %>
 <% end %>
-
 
 
 <table>
