bootstrapで外見を整える

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -30,5 +30,5 @@
   <%= form.label :priority %>
   <%= form.text_field :priority %>
   </div>
-  <%= form.submit value: "aaa" %>
+  <%= form.submit value: "aaa", class: "mt-3 btn btn-primary" %>
 <% end %>
