--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,39 +1,52 @@
-<h1>タスク一覧</h1>
-<p><%= notice %></p>
-<%= form_with url:search_tasks_path, local: true, method: "get" do |form| %>
-  <%= form.label :title, "Search for" %>
-  <%= form.text_field :title %>
-  <%= form.select :status, ["未着手", "着手中", "完了"] %>
-  <%= form.submit "Search" %>
-<% end %>
-
-
-
-<table>
-  <tr>
-    <th>タスク名</th>
-    <th>詳しい内容</th>
-    <th><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
-    <th>登録日時</th>
-    <th>ステータス</th>
-    <th>優先度</th>
-  </tr>
-
-  
-  <% @tasks.each do |task| %>
-  <tr class="task_row">
-    <td><%= task.title %></td>
-    <td><%= task.content %></td>
-    <td><%= task.deadline %></td>
-    <td><%= task.created_at %></td>
-    <td><%= task.status %></td>
-    <td><%= task.priority %></td>
-    <td><%= link_to "詳細", task_path(task.id) %></td>
-    <td><%= link_to "編集", edit_task_path(task.id) %></td>
-    <td><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
-  </tr>
-  <% end %>
-  
-</table>
-
-<%= link_to '新しいタスクを投稿する', new_task_path %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-2 mb-5">
+      <div class="list-group">
+        <a href="http://localhost:3000/" class="list-group-item list-group-item-action active">タスク情報</a>
+        <a href="http://localhost:3000/tasks/new" class="list-group-item list-group-item-action">タスク作成</a>
+        <a href="#" class="list-group-item list-group-item-action">ユーザー情報</a>
+      </div>
+    </div>
+    <div class="col-md-10">
+    <p class="h3 border-bottom pb-2 mb-3">タスク情報</p>
+    <p><%= notice %></p>
+    <header>
+      <p>現在登録しているタスクの情報です。</p>
+      <%= form_with url:search_tasks_path, local: true, method: "get" do |form| %>
+        <%= form.label :title, "Search for" %>
+        <%= form.text_field :title, placeholder: "検索" %>
+        <%= form.select :status, ["未着手", "着手中", "完了"] %>
+        <%= form.submit "Search" %>
+      <% end %>
+    </header>
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">タスク名</th>
+          <th scope="col">詳しい内容</th>
+          <th scope="col"><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
+          <th scope="col">登録日時</th>
+          <th scope="col">ステータス</th>
+          <th scope="col">優先度</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @tasks.each do |task| %>
+          <tr class="task_row">
+            <td><%= task.title %></td>
+            <td><%= task.content %></td>
+            <td><%= task.deadline %></td>
+            <td><%= task.created_at %></td>
+            <td><%= task.status %></td>
+            <td><%= task.priority %></td>
+            <td><%= link_to "詳細", task_path(task.id) %></td>
+            <td><%= link_to "編集", edit_task_path(task.id) %></td>
+            <td><%= link_to '削除', task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+      <%= link_to '新しいタスクを投稿する', new_task_path %>
+    </div>
+  </div>
+</div>
