--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,13 +9,13 @@
     </div>
     <div class="col-md-10">
     <p class="h3 border-bottom pb-2 mb-3">タスク情報</p>
+    <p>現在登録しているタスクの情報です。</p>
     <p><%= notice %></p>
     <header>
-      <p>現在登録しているタスクの情報です。</p>
       <%= form_with url:search_tasks_path, local: true, method: "get" do |form| %>
         <%= form.label :title, "Search for" %>
-        <%= form.text_field :title, placeholder: "検索" %>
-        <%= form.select :status, ["未着手", "着手中", "完了"] %>
+        <%= form.text_field :title, placeholder: "タスク名" %>
+        <%= form.select :status, ["未着手", "着手中", "完了"],  { include_blank: "ステータス" } %>
         <%= form.submit "Search" %>
       <% end %>
     </header>
