--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -24,11 +24,11 @@
   </div>
   <div class="task_status">
     <%= form.label :status %>
-    <%= form.select :status, ["未着手", "着手中", "完了"] %>
+    <%= form.select :status, ["未着手", "着手中", "完了"], { include_blank: "ステータス" } %>
   </div>
   <div class="task_priority">
   <%= form.label :priority %>
-  <%= form.text_field :priority %>
+  <%= form.select :priority, ["高", "中", "低"], { include_blank: "優先度" } %>
   </div>
   <%= form.submit value: "aaa", class: "mt-3 btn btn-primary" %>
 <% end %>
