--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,7 +12,7 @@
     <p>現在登録しているタスクの情報です。</p>
     <p><%= notice %></p>
     <header>
-      <%= form_with url:search_tasks_path, local: true, method: "get" do |form| %>
+      <%= form_with scope: :task, url:search_tasks_path, local: true, method: "get" do |form| %>
         <%= form.label :title, "Search for" %>
         <%= form.text_field :title, placeholder: "タスク名" %>
         <%= form.select :status, ["未着手", "着手中", "完了"],  { include_blank: "ステータス" } %>
@@ -27,7 +27,7 @@
           <th scope="col"><%= link_to "終了期限", tasks_path(sort_expired: "true") %></th>
           <th scope="col">登録日時</th>
           <th scope="col">ステータス</th>
-          <th scope="col">優先度</th>
+          <th scope="col"><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
         </tr>
       </thead>
       <tbody>
@@ -47,6 +47,7 @@
       </tbody>
     </table>
       <%= link_to '新しいタスクを投稿する', new_task_path %>
+      <%= paginate @tasks %>
     </div>
   </div>
 </div>
