--- a/app/views/tasks/search.html.erb
+++ b/app/views/tasks/search.html.erb
@@ -12,9 +12,9 @@
     <p><%= notice %></p>
     <header>
       <p>検索結果が表示されます。</p>
-      <p>タスク： <%= params[:title] %></p>
-      <p>ステータス： <%= params[:status] %></p>
-      <%= form_with url:search_tasks_path, local: true, method: "get" do |form| %>
+      <p>タスク： <%= params[:task][:title] %></p>
+      <p>ステータス： <%= params[:task][:status] %></p>
+      <%= form_with scope: :task, url:search_tasks_path, local: true, method: "get" do |form| %>
         <%= form.label :title, "Search for" %>
         <%= form.text_field :title, placeholder: "タスク名" %>
         <%= form.select :status, ["未着手", "着手中", "完了"], { include_blank: "ステータス" } %>
