--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-md-2 mb-5">
       <div class="list-group">
-        <a href="http://localhost:3000/" class="list-group-item list-group-item-action active">タスク情報</a>
-        <a href="http://localhost:3000/tasks/new" class="list-group-item list-group-item-action">タスク作成</a>
+        <a href="/" class="list-group-item list-group-item-action active">タスク情報</a>
+        <a href="/tasks/new" class="list-group-item list-group-item-action">タスク作成</a>
         <a href="#" class="list-group-item list-group-item-action">ユーザー情報</a>
       </div>
     </div>
