--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,32 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
+      <% if logged_in? %>
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">ログイン<span class="sr-only">(current)</span></a>
+          <%= link_to "Profile", user_path(current_user.id), class: "text-white mr-3" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">会員登録</a>
+          <%= link_to "Logout", session_path(current_user.id), method: :delete, class: "text-white" %>
         </li>
       </ul>
+      <% else %>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <%= link_to "Sign up", new_user_path, class: "text-white mr-3" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Login", new_session_path, class: "text-white" %>
+        </li>
+      </ul>
+      <% end %>
     </div>
+
   </nav>
     </header>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
     <%= yield %>
     <footer class="bg-secondary text-center p-5 m-5">
       Copyright(C)2022 All Rights Reserved
