--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,7 +4,7 @@
       <div class="list-group">
         <a href="/" class="list-group-item list-group-item-action active">タスク情報</a>
         <a href="/tasks/new" class="list-group-item list-group-item-action">タスク作成</a>
-        <a href="#" class="list-group-item list-group-item-action">ユーザー情報</a>
+        <a href="/users/<%= current_user.id %>" class="list-group-item list-group-item-action">ユーザー情報</a>
       </div>
     </div>
     <div class="col-md-10">
