--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= user.id %></td>
         <td><%= user.name %></td>
         <td><%= user.tasks.count %></td>
-        <td><%= link_to "編集", edit_admin_user_path(user.id) %></td>
+        <td><%= link_to "編集", edit_admin_user_path(user.id), id: "cclemon" %></td>
         <td><%= button_to '削除', user_path(user.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
         <td><%= user.admin %></td>
       </tr>
