--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,6 +6,7 @@
       <th scope="col">id</th>
       <th scope="col">ユーザー</th>
       <th scope="col">タスクの数</th>
+      <th scope="col">詳細</th>
       <th scope="col">更新</th>
       <th scope="col">削除</th>
       <th scope="col">管理人</th>
@@ -17,12 +18,14 @@
         <td><%= user.id %></td>
         <td><%= user.name %></td>
         <td><%= user.tasks.count %></td>
+        <td><%= link_to "詳細", admin_user_path(user.id) %></td>
         <td><%= link_to "編集", edit_admin_user_path(user.id), id: "cclemon" %></td>
         <td><%= button_to '削除', user_path(user.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
         <td><%= user.admin %></td>
+
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'ユーザー作成', new_user_path %>
+<%= link_to 'ユーザー作成', new_admin_user_path %>
