--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,7 +1,6 @@
 <h1>Sign up</h1>
 
-<%= form_with(model: @user, local: true) do |f| %>
-
+<%= form_with model: [:admin, @user], local: true do |f| %> 
   <%= f.label :name %>
   <%= f.text_field :name %>
 
