検索クエリ設定

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -16,7 +16,7 @@
       <p>終了期限： <%= @task.deadline %></p>
       <p>状態： <%= @task.status %></p>
       <p class="mb-5">優先順位： <%= @task.priority %></p>
-      <%= link_to 'タスクに戻る', tasks_path %>
+      <%= link_to 'タスクに戻る', root_path %>
     </div>
   </div>
 </div>
