--- a/app/views/tasks/search.html.erb
+++ b/app/views/tasks/search.html.erb
@@ -14,7 +14,7 @@
       <p>検索結果が表示されます。</p>
       <p>タスク： <%= params[:task][:title] %></p>
       <p>ステータス： <%= params[:task][:status] %></p>
-      <p>タグ : <%= Label.find(params[:task][:label_ids]).tag if params[:task][:label_ids] %> <p>
+      <p>タグ : <%= Label.find(params[:task][:label_ids]).tag if params[:task][:label_ids].present? %> <p>
 
       <%= form_with scope: :task, url:search_tasks_path, local: true, method: "get" do |form| %>
         <%= form.label :title, "Search for" %>
